--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=true
 org.gradle.jvmargs=-Xmx4608m
+android.enableR8.fullMode=false
+kotlin.jvm.target=17
