--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 1.0.0+4
+version: 1.0.2+6
 
 environment:
-  sdk: ">=3.0.5 <4.0.0"
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -31,10 +31,10 @@ dependencies:
   flutter_html: any
   flutter_local_notifications: ^17.2.3
   flutter_osm_plugin: ^1.3.3+1
-  flutter_paypal_native: ^2.1.0
+  #flutter_paypal_native: ^2.0.0
   flutter_polyline_points: ^2.1.0
   flutter_rating_bar: ^4.0.1
-  flutter_stripe: ^11.1.0
+  flutter_stripe: ^10.0.0
   flutter_svg: ^2.0.10+1
   geocoding: ^3.0.0
   geolocator: any
@@ -52,7 +52,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   provider: ^6.1.2
   qr_flutter: ^4.1.0
-  razorpay_flutter: ^1.3.7
+  razorpay_flutter: ^1.4.0
   share_plus: ^10.0.2
   shared_preferences: ^2.3.2
   sign_in_with_apple: ^6.1.3
@@ -62,6 +62,10 @@ dependencies:
   uuid: ^4.5.1
 
 dependency_overrides:
+  stripe_platform_interface: 11.3.0
+  cloud_firestore: 5.4.3
+  cloud_firestore_platform_interface: 6.6.3
+  cloud_firestore_web: 4.4.3
   webview_flutter: ^4.9.0
   http: ^1.2.2
   firebase_messaging: ^15.1.2
